LUT-26264 : Added check for SQL scripts/plugin version match, and backported code for JDK8 compatibility